--- a/app.json
+++ b/app.json
@@ -6,6 +6,9 @@
     "slug": "expo-template-bare",
     "privacy": "unlisted",
     "sdkVersion": "35.0.0",
+    "android": {
+      "package": "com.proacto.patientapp"
+    },
     "version": "1.0.0",
     "entryPoint": "node_modules/expo/AppEntry.js",
     "platforms": [
