--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-av": "^7.0.1",
     "expo-camera": "^7.0.0",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
-    "react-dom": "16.8.3",
+    "react-dom": "^16.8.3",
     "react-native": "0.59.10",
-    "react-native-gesture-handler": "~1.4.1",
-    "react-native-reanimated": "~1.3.0",
-    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-paper": "^3.2.1",
+    "react-native-reanimated": "^1.3.2",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
-    "react-native-web": "^0.11.7"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^4.0.10",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
