--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "expo": "^35.0.0",
     "expo-av": "^7.0.1",
     "expo-camera": "^7.0.0",
+    "formik": "^2.0.6",
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "^16.8.3",
     "react-native": "0.59.10",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "^1.3.2",
