--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-voice": "^0.3.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.5",
