--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,4 +38,6 @@ target 'patientapp' do
 
   pod 'react-native-voice', :path => '../node_modules/react-native-voice'
 
+  pod 'react-native-slider', :path => '../node_modules/@react-native-community/slider'
+
 end
