--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^2.0.8",
     "expo": "^35.0.0",
     "expo-av": "^7.0.1",
     "expo-camera": "^7.0.0",
